--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ canvas {
   height: 80px;
 }
 
+.gameTitleAfterEffect{
+  width: 25%;
+  height: 80px;
+}
+
 .greeting{
   font-size: 40px;
   color: white;
@@ -47,9 +52,9 @@ canvas {
 .customButton {
   width:180px;
   height:50px;
-  background-color: #7134fe;
-  border: 3px solid rgb(26, 21, 21);
-  color: rgb(248, 248, 248);
+  background-color: #fea834;
+  border: 3px solid white;
+  color: #FFFF;
   font-weight:bold;
   border-radius: 10px;
   margin-bottom:100px;
